--- a/index.html
+++ b/index.html
@@ -488,12 +488,13 @@
 
 	  /* kein Layout-Shift durch Scrollbar */
 	  scrollbar-gutter: stable;
+	  
+	  padding-bottom: calc(280px + env(safe-area-inset-bottom));
+      box-sizing: border-box;
+	  
 	}
 
-	#page-music .music-scroll-spacer{
-	  height: 750px;   /* iPad Reserve unten */
-	}
-
+	
 
 
 
