--- a/index.html
+++ b/index.html
@@ -349,6 +349,10 @@
 	}
 
 
+	/* NUR wenn Music aktiv ist: globales Content-Scrolling AUS */
+	.content:has(#page-music.active){
+	  overflow: hidden;
+	}
 
 
 
@@ -476,7 +480,10 @@
 	  left: 0;
 	  right: 0;
 	  top: var(--music-scroll-top);
-	  bottom: 0;
+	  bottom: env(safe-area-inset-bottom);
+	  padding-bottom: 20px;
+	  box-sizing: border-box;
+	
 
 	  overflow-y: auto;
 	  overflow-x: hidden;
