--- a/index.html
+++ b/index.html
@@ -480,10 +480,7 @@
 	  left: 0;
 	  right: 0;
 	  top: var(--music-scroll-top);
-	  bottom: env(safe-area-inset-bottom);
-	  padding-bottom: 20px;
-	  box-sizing: border-box;
-	
+	  bottom: 100px;
 
 	  overflow-y: auto;
 	  overflow-x: hidden;
