--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
 	  left: 0;
 	  right: 0;
 	  top: var(--music-scroll-top);
-	  bottom: 100px;
+	  bottom: 0;
 
 	  overflow-y: auto;
 	  overflow-x: hidden;
@@ -1163,7 +1163,8 @@
     </div>
 
     <!-- Reserve/Platz für zukünftige Inhalte unterhalb des Viewports -->
-    <div class="music-scroll-spacer"></div>
+	<div class="music-scroll-spacer" style="height: 800px;"></div>
+
 
   </div>
    
