--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
   display: block;
   position: fixed;
   top: 10px;
-  left: 10px;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 9999;
 
   width: 100px;
@@ -208,8 +209,8 @@
 
   color: #ffffff;
 
-  background: rgba(0,0,0,0.6);
-  border: 1px solid rgba(255,255,255,0.6);
+  background: rgba(0,0,0,0);
+  border: 0px solid rgba(255,255,255,0.6);
 
   pointer-events: none;
 }
@@ -1594,7 +1595,8 @@
 	  
 	  
 	  
-	  
+		  
+		  
 	  
 	  
 	  
@@ -1604,6 +1606,12 @@
 	  
 
       if (target) target.classList.add('active');
+	  
+		// Viewport-Debug nur auf Contact anzeigen
+		const vd = document.getElementById("viewport-debug");
+		if (vd){
+		  vd.style.display = (pageKey === "contact") ? "block" : "none";
+		}
 	  
 		if (pageKey === "home") requestAnimationFrame(updateHomeButtonAnchors);
 
@@ -1672,9 +1680,7 @@
 		}
 	
 	  
-	  
-	  
-	  
+  
 	  
     }
 
@@ -1913,6 +1919,9 @@
 	  x = targetX;
 	  inner.style.transform = `translateX(${x}px)`;
 	  
+
+
+
 	  
 	  
 	  // --- Resize-Stabilisierung ---
@@ -1922,7 +1931,6 @@
 		x = targetX;
 		inner.style.transform = `translateX(${x}px)`;
 	  });
-	  
 	  
 	  
 	  
@@ -3139,7 +3147,8 @@
 	(function viewportDebug(){
 	  const el = document.getElementById("viewport-debug");
 	  if (!el) return;
-
+	  // Nur auf Contact sichtbar (Initialzustand)
+	  el.style.display = "none";
 	  function update(){
 		el.textContent = `${window.innerWidth} × ${window.innerHeight}`;
 	  }
