--- a/index.html
+++ b/index.html
@@ -2504,14 +2504,7 @@
 		if (id && id === lastCommitId) return;
 		lastCommitId = id;
 		
-		// NEW: bei neuem Cover weich nach oben scrollen
-		const musicScroll = document.querySelector("#page-music .music-scroll");
-		if (musicScroll){
-		  musicScroll.scrollTo({
-			top: 0,
-			behavior: "smooth"
-		  });
-		}
+
 		
 		
 
@@ -2566,6 +2559,10 @@
 		  if (!box) return;
 		  const h = box.getBoundingClientRect().height || 0;
 		  document.documentElement.style.setProperty("--music-info-h", `${h}px`);
+		    const musicScroll = document.querySelector("#page-music .music-scroll");
+			if (musicScroll){
+			musicScroll.scrollTo({ top: 0, behavior: "smooth" });
+			}
 		});
 
 		const t1 = document.querySelector("#page-music .music-info-title");
