--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Peter Dewald</title>
+  <title>peter dewald</title>
+  <link rel="icon" type="image/svg+xml" href="Logo NEU 03.svg">
 
   <!--
     WAVETERM D HP — Homepage Grundgerüst
@@ -315,12 +316,21 @@
 
     /* SVG skaliert über height, Breite automatisch */
     .logo svg {
-      height: var(--logo-height);
+		height: var(--logo-h);
       width: auto;
       display: block;
-	  transform: translateX(calc(-1 * var(--logo-optical-shift)));
+		  transform: none !important;
+		  margin-top: 10px;
+		  margin-left: 10px;
 
     }
+
+	/* Logo-SVG: Stroke von Inkscape überschreiben */
+	.logo svg *{
+	  stroke: currentColor !important;
+	}
+
+
 
 
 	/* ============================================================
@@ -1388,7 +1398,264 @@
        WORTMARKE — INLINE SVG (Farbe kommt über .logo { color: ... })
        ============================================================ -->
   <div class="logo" aria-hidden="true">
-		<div class="logo-name">peter dewald</div>
+<svg
+
+   viewBox="0 0 426.24375 70.379166"
+   version="1.1"
+   id="svg1"
+   inkscape:version="1.4.2 (f4327f4, 2025-05-13)"
+   sodipodi:docname="pd plus Logo 03.svg"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:svg="http://www.w3.org/2000/svg">
+  <sodipodi:namedview
+     id="namedview1"
+     pagecolor="#ffffff"
+     bordercolor="#000000"
+     borderopacity="0.25"
+     inkscape:showpageshadow="2"
+     inkscape:pageopacity="0.0"
+     inkscape:pagecheckerboard="0"
+     inkscape:deskcolor="#d1d1d1"
+     inkscape:document-units="px"
+     showgrid="true"
+     inkscape:zoom="0.39420244"
+     inkscape:cx="560.62565"
+     inkscape:cy="-52.003737"
+     inkscape:window-width="1920"
+     inkscape:window-height="1129"
+     inkscape:window-x="-8"
+     inkscape:window-y="-8"
+     inkscape:window-maximized="1"
+     inkscape:current-layer="layer1">
+    <inkscape:grid
+       id="grid1"
+       units="px"
+       originx="0"
+       originy="0"
+       spacingx="2.6458333"
+       spacingy="2.6458333"
+       empcolor="#0099e5"
+       empopacity="0.30196078"
+       color="#0099e5"
+       opacity="0.14901961"
+       empspacing="1"
+       enabled="true"
+       visible="true" />
+    <inkscape:grid
+       type="modular"
+       id="grid2"
+       units="px"
+       originx="0"
+       originy="0"
+       spacingx="40"
+       spacingy="40"
+       empcolor="#0047cb"
+       empopacity="0.30196078"
+       color="#0099e5"
+       opacity="0.14901961"
+       empspacing="0"
+       marginx="0"
+       marginy="0"
+       gapx="10"
+       gapy="10"
+       enabled="false"
+       visible="false" />
+    <inkscape:grid
+       type="axonomgrid"
+       id="grid3"
+       units="px"
+       originx="0"
+       originy="0"
+       spacingx="1"
+       spacingy="1"
+       empcolor="#0099e5"
+       empopacity="0.30196078"
+       color="#0099e5"
+       opacity="0.14901961"
+       empspacing="5"
+       dotted="false"
+       gridanglex="30"
+       gridanglez="30"
+       enabled="false"
+       visible="true" />
+    <inkscape:grid
+       id="grid4"
+       units="px"
+       originx="0"
+       originy="0"
+       spacingx="2.6458333"
+       spacingy="2.6458333"
+       empcolor="#0099e5"
+       empopacity="0.30196078"
+       color="#0099e5"
+       opacity="0.14901961"
+       empspacing="1"
+       enabled="false"
+       visible="true" />
+  </sodipodi:namedview>
+  <defs
+     id="defs1" />
+  <g
+     inkscape:label="Ebene 1"
+     inkscape:groupmode="layer"
+     id="layer1">
+    <path
+       id="path5"
+       style="fill:none;stroke:#000000;stroke-width:2.91045;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
+       d="M 114.84004,35.498293 A 15.081217,15.081214 0 0 1 99.902183,50.578825 15.081217,15.081214 0 0 1 84.68033,35.785004 15.081217,15.081214 0 0 1 99.3288,20.423211 15.081217,15.081214 0 0 1 114.82914,34.924976" />
+    <path
+       id="path5-8-0"
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
+       d="M 206.3088,33.241259 A 14.653809,14.653799 0 0 1 219.60525,20.668618" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91041;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 84.70161,20.427412 c 0,45.796476 0,42.068766 0,42.068766"
+       id="path6" />
+    <path
+       id="path5-8-6"
+       style="fill:none;stroke:#000000;stroke-width:2.91102;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
+       d="M 266.03819,35.586476 A 15.08091,15.080899 0 0 1 251.10065,50.666694 15.08091,15.080899 0 0 1 235.8791,35.873179 15.08091,15.080899 0 0 1 250.52727,20.511708 15.08091,15.080899 0 0 1 266.0273,35.013171" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 266.25263,8.54324 c 0,45.870397 0,42.136674 0,42.136674"
+       id="path6-1-13" />
+    <path
+       id="path5-8-6-6"
+       style="fill:none;stroke:#000000;stroke-width:2.91102;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
+       d="m 422.14323,35.586372 a 15.08091,15.080899 0 0 1 -14.93754,15.080136 15.08091,15.080899 0 0 1 -15.22155,-14.793436 15.08091,15.080899 0 0 1 14.64817,-15.361387 15.08091,15.080899 0 0 1 15.50003,14.50139" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 422.35767,8.543217 c 0,45.87021 0,42.136511 0,42.136511"
+       id="path6-1-13-14" />
+    <path
+       id="path5-8-6-7"
+       style="fill:none;stroke:#000000;stroke-width:2.91102;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
+       d="M 379.80968,35.586322 A 15.08091,15.080899 0 0 1 364.87214,50.666458 15.08091,15.080899 0 0 1 349.65059,35.873022 15.08091,15.080899 0 0 1 364.29876,20.511639 15.08091,15.080899 0 0 1 379.79879,35.013025" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 380.02412,20.118695 c 0,33.689644 0,30.947404 0,30.947404"
+       id="path6-1-13-1" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 386.69407,8.466643 c 0,46.311086 0,42.541495 0,42.541495"
+       id="path6-1-1" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.85062;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 158.61768,8.466643 1e-5,28.617321"
+       id="path6-1-1-9"
+       sodipodi:nodetypes="cc" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.95179;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 206.16731,20.618014 c 0,32.856384 0,30.181961 0,30.181961"
+       id="path6-1-6-5" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.86057;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 153.27661,16.446581 h 15.70924 v 0"
+       id="path8" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 158.61769,37.083964 c 0.18162,6.044665 1.19227,12.973615 10.18574,13.328168"
+       id="path9"
+       sodipodi:nodetypes="cc" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.96581;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 303.41965,20.418241 10.60108,30.171954 11.94572,-30.171954 11.90674,30.171954 10.60108,-30.171954"
+       id="path10"
+       sodipodi:nodetypes="ccccc" />
+    <path
+       id="path5-8-23-7-8"
+       style="fill:none;fill-opacity:1;stroke:#000000;stroke-width:2.91045;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="M 50.449592,35.588601 A 15.081296,15.081185 0 0 1 35.511731,50.669105 15.081296,15.081185 0 0 1 20.289887,35.875302 15.081296,15.081185 0 0 1 34.938338,20.513548 15.081296,15.081185 0 0 1 50.438672,35.015278" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       id="path4"
+       sodipodi:type="arc"
+       sodipodi:cx="35.19088"
+       sodipodi:cy="35.411106"
+       sodipodi:rx="31.089867"
+       sodipodi:ry="31.08987"
+       sodipodi:start="2.0780094"
+       sodipodi:end="4.9951926"
+       sodipodi:open="true"
+       sodipodi:arc-type="arc"
+       d="M 20.089192,62.586813 A 31.089867,31.08987 0 0 1 6.4951396,23.44723 31.089867,31.08987 0 0 1 43.866476,5.5562227" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       id="path4-2"
+       sodipodi:type="arc"
+       sodipodi:cx="35.19088"
+       sodipodi:cy="35.411106"
+       sodipodi:rx="31.089867"
+       sodipodi:ry="31.08987"
+       sodipodi:start="5.2232825"
+       sodipodi:end="1.8354861"
+       sodipodi:open="true"
+       sodipodi:arc-type="arc"
+       d="M 50.392484,8.2911645 A 31.089867,31.08987 0 0 1 63.972212,47.167584 31.089867,31.08987 0 0 1 27.057464,65.418232" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="M 20.287742,36.069417 V 62.589598"
+       id="path5-24" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 50.360852,8.568627 v 25.81486"
+       id="path5-8" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.9104;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       id="path1"
+       sodipodi:type="arc"
+       sodipodi:cx="136.7896"
+       sodipodi:cy="35.537136"
+       sodipodi:rx="15.081405"
+       sodipodi:ry="15.080885"
+       sodipodi:start="0.50851145"
+       sodipodi:end="6.2776822"
+       sodipodi:open="true"
+       sodipodi:arc-type="arc"
+       d="m 149.96275,42.879681 a 15.081405,15.080885 0 0 1 -18.76726,6.662496 15.081405,15.080885 0 0 1 -9.01282,-17.758086 15.081405,15.080885 0 0 1 16.45727,-11.213903 15.081405,15.080885 0 0 1 13.23083,14.883957" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 151.2112,35.45235 -28.84315,0.08657"
+       id="path2" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.9104;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       id="path1-1"
+       sodipodi:type="arc"
+       sodipodi:cx="184.41435"
+       sodipodi:cy="35.537533"
+       sodipodi:rx="15.081405"
+       sodipodi:ry="15.080885"
+       sodipodi:start="0.50851145"
+       sodipodi:end="6.2776822"
+       sodipodi:open="true"
+       sodipodi:arc-type="arc"
+       d="m 197.58751,42.880078 a 15.081405,15.080885 0 0 1 -18.76727,6.662496 15.081405,15.080885 0 0 1 -9.01282,-17.758087 15.081405,15.080885 0 0 1 16.45728,-11.213903 15.081405,15.080885 0 0 1 13.23083,14.883957" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 198.83586,35.451962 -28.84315,0.0866"
+       id="path2-4" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.9104;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       id="path1-1-8"
+       sodipodi:type="arc"
+       sodipodi:cx="287.73654"
+       sodipodi:cy="35.537518"
+       sodipodi:rx="15.081405"
+       sodipodi:ry="15.080885"
+       sodipodi:start="0.50851145"
+       sodipodi:end="6.2776822"
+       sodipodi:open="true"
+       sodipodi:arc-type="arc"
+       d="m 300.9097,42.880062 a 15.081405,15.080885 0 0 1 -18.76727,6.662496 15.081405,15.080885 0 0 1 -9.01282,-17.758086 15.081405,15.080885 0 0 1 16.45728,-11.213903 15.081405,15.080885 0 0 1 13.23083,14.883957" />
+    <path
+       style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
+       d="m 302.15727,35.451954 -28.84315,0.0866"
+       id="path2-4-2" />
+  </g>
+</svg>
+
 
   </div>
 
