--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>peter dewald</title>
-<link rel="icon" type="image/svg+xml" href="Logo-NEU-03.svg">
-<link rel="icon" href="favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
-<link rel="icon" href="favicon.ico">
 
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=2">
+<link rel="icon" href="/favicon.ico">
+<link rel="icon" type="image/svg+xml" href="/Logo-NEU-03.svg">
 
   <!--
     WAVETERM D HP — Homepage Grundgerüst
