--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>peter dewald</title>
 
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=2">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png?v=2">
-<link rel="icon" type="image/svg+xml" href="/Logo-NEU-03.svg">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon_32x32.png" sizes="32x32">
+	<link rel="icon" href="/favicon_48x48.png" sizes="48x48">
+	<link rel="icon" href="/favicon_96x96.png" sizes="96x96">
+	<link rel="icon" href="/favicon_144x144.png" sizes="144x144">
+
+
+
 
   <!--
     WAVETERM D HP — Homepage Grundgerüst
@@ -324,7 +329,7 @@
       display: block;
 		  transform: none !important;
 		  margin-top: 10px;
-		  margin-left: 10px;
+		  margin-left: -20px;
 
     }
 
@@ -1401,13 +1406,21 @@
        WORTMARKE — INLINE SVG (Farbe kommt über .logo { color: ... })
        ============================================================ -->
   <div class="logo" aria-hidden="true">
+
+
+
+
+
+
+
+
 <svg
 
-   viewBox="0 0 426.24375 70.379166"
+   viewBox="0 0 433.91666 70.379166"
    version="1.1"
    id="svg1"
    inkscape:version="1.4.2 (f4327f4, 2025-05-13)"
-   sodipodi:docname="pd plus Logo 03.svg"
+   sodipodi:docname="pd plus Logo 04.svg"
    xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
    xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
    xmlns="http://www.w3.org/2000/svg"
@@ -1423,9 +1436,9 @@
      inkscape:deskcolor="#d1d1d1"
      inkscape:document-units="px"
      showgrid="true"
-     inkscape:zoom="0.39420244"
-     inkscape:cx="560.62565"
-     inkscape:cy="-52.003737"
+     inkscape:zoom="0.55748644"
+     inkscape:cx="797.32881"
+     inkscape:cy="-298.66197"
      inkscape:window-width="1920"
      inkscape:window-height="1129"
      inkscape:window-x="-8"
@@ -1507,42 +1520,42 @@
     <path
        id="path5"
        style="fill:none;stroke:#000000;stroke-width:2.91045;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
-       d="M 114.84004,35.498293 A 15.081217,15.081214 0 0 1 99.902183,50.578825 15.081217,15.081214 0 0 1 84.68033,35.785004 15.081217,15.081214 0 0 1 99.3288,20.423211 15.081217,15.081214 0 0 1 114.82914,34.924976" />
+       d="M 115.89838,35.498293 A 15.081217,15.081214 0 0 1 100.96052,50.578825 15.081217,15.081214 0 0 1 85.738664,35.785004 15.081217,15.081214 0 0 1 100.38713,20.423211 15.081217,15.081214 0 0 1 115.88748,34.924976" />
     <path
        id="path5-8-0"
        style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
        d="M 206.3088,33.241259 A 14.653809,14.653799 0 0 1 219.60525,20.668618" />
     <path
        style="fill:none;stroke:#000000;stroke-width:2.91041;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
-       d="m 84.70161,20.427412 c 0,45.796476 0,42.068766 0,42.068766"
+       d="m 85.759944,20.427412 c 0,45.796476 0,42.068766 0,42.068766"
        id="path6" />
     <path
        id="path5-8-6"
        style="fill:none;stroke:#000000;stroke-width:2.91102;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
-       d="M 266.03819,35.586476 A 15.08091,15.080899 0 0 1 251.10065,50.666694 15.08091,15.080899 0 0 1 235.8791,35.873179 15.08091,15.080899 0 0 1 250.52727,20.511708 15.08091,15.080899 0 0 1 266.0273,35.013171" />
+       d="M 263.92151,35.586476 A 15.08091,15.080899 0 0 1 248.98397,50.666694 15.08091,15.080899 0 0 1 233.76242,35.873179 15.08091,15.080899 0 0 1 248.41059,20.511708 15.08091,15.080899 0 0 1 263.91062,35.013171" />
     <path
        style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
-       d="m 266.25263,8.54324 c 0,45.870397 0,42.136674 0,42.136674"
+       d="m 264.13595,8.54324 c 0,45.870397 0,42.136674 0,42.136674"
        id="path6-1-13" />
     <path
        id="path5-8-6-6"
        style="fill:none;stroke:#000000;stroke-width:2.91102;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
-       d="m 422.14323,35.586372 a 15.08091,15.080899 0 0 1 -14.93754,15.080136 15.08091,15.080899 0 0 1 -15.22155,-14.793436 15.08091,15.080899 0 0 1 14.64817,-15.361387 15.08091,15.080899 0 0 1 15.50003,14.50139" />
+       d="m 429.55161,35.586372 a 15.08091,15.080899 0 0 1 -14.93754,15.080136 15.08091,15.080899 0 0 1 -15.22155,-14.793436 15.08091,15.080899 0 0 1 14.64817,-15.361387 15.08091,15.080899 0 0 1 15.50003,14.50139" />
     <path
        style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
-       d="m 422.35767,8.543217 c 0,45.87021 0,42.136511 0,42.136511"
+       d="m 429.76605,8.543217 c 0,45.87021 0,42.136511 0,42.136511"
        id="path6-1-13-14" />
     <path
        id="path5-8-6-7"
        style="fill:none;stroke:#000000;stroke-width:2.91102;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none"
-       d="M 379.80968,35.586322 A 15.08091,15.080899 0 0 1 364.87214,50.666458 15.08091,15.080899 0 0 1 349.65059,35.873022 15.08091,15.080899 0 0 1 364.29876,20.511639 15.08091,15.080899 0 0 1 379.79879,35.013025" />
+       d="M 382.9847,35.586322 A 15.08091,15.080899 0 0 1 368.04716,50.666458 15.08091,15.080899 0 0 1 352.82561,35.873022 15.08091,15.080899 0 0 1 367.47378,20.511639 15.08091,15.080899 0 0 1 382.97381,35.013025" />
     <path
        style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
-       d="m 380.02412,20.118695 c 0,33.689644 0,30.947404 0,30.947404"
+       d="m 383.19914,20.118695 c 0,33.689644 0,30.947404 0,30.947404"
        id="path6-1-13-1" />
     <path
        style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
-       d="m 386.69407,8.466643 c 0,46.311086 0,42.541495 0,42.541495"
+       d="m 391.98577,8.466643 c 0,46.311086 0,42.541495 0,42.541495"
        id="path6-1-1" />
     <path
        style="fill:none;stroke:#000000;stroke-width:2.85062;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
@@ -1564,7 +1577,7 @@
        sodipodi:nodetypes="cc" />
     <path
        style="fill:none;stroke:#000000;stroke-width:2.96581;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
-       d="m 303.41965,20.418241 10.60108,30.171954 11.94572,-30.171954 11.90674,30.171954 10.60108,-30.171954"
+       d="m 304.47799,20.418241 10.60108,30.171954 11.94572,-30.171954 11.90674,30.171954 10.60108,-30.171954"
        id="path10"
        sodipodi:nodetypes="ccccc" />
     <path
@@ -1643,7 +1656,7 @@
        style="fill:none;stroke:#000000;stroke-width:2.9104;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
        id="path1-1-8"
        sodipodi:type="arc"
-       sodipodi:cx="287.73654"
+       sodipodi:cx="286.67819"
        sodipodi:cy="35.537518"
        sodipodi:rx="15.081405"
        sodipodi:ry="15.080885"
@@ -1651,13 +1664,23 @@
        sodipodi:end="6.2776822"
        sodipodi:open="true"
        sodipodi:arc-type="arc"
-       d="m 300.9097,42.880062 a 15.081405,15.080885 0 0 1 -18.76727,6.662496 15.081405,15.080885 0 0 1 -9.01282,-17.758086 15.081405,15.080885 0 0 1 16.45728,-11.213903 15.081405,15.080885 0 0 1 13.23083,14.883957" />
+       d="m 299.85135,42.880062 a 15.081405,15.080885 0 0 1 -18.76727,6.662496 15.081405,15.080885 0 0 1 -9.01282,-17.758086 15.081405,15.080885 0 0 1 16.45728,-11.213903 15.081405,15.080885 0 0 1 13.23083,14.883957" />
     <path
        style="fill:none;stroke:#000000;stroke-width:2.91042;stroke-linecap:round;stroke-linejoin:round;stroke-dasharray:none;stroke-opacity:1"
-       d="m 302.15727,35.451954 -28.84315,0.0866"
+       d="m 301.09893,35.451954 -28.84315,0.0866"
        id="path2-4-2" />
   </g>
 </svg>
+
+
+
+
+
+
+
+
+
+
 
 
   </div>
