--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="icon" href="/https://peterdewald.de/favicon_32x32.png" sizes="32x32">
 	<link rel="icon" href="/https://peterdewald.de/favicon_48x48.png" sizes="48x48">
 	<link rel="icon" href="/https://peterdewald.de/favicon_96x96.png" sizes="96x96">
-	<link rel="icon" href="/https://peterdewald.de/" sizes="144x144">
+	<link rel="icon" href="/https://peterdewald.de/favicon_144x144.png" sizes="144x144">
 
 
 
