--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>peter dewald</title>
-	<img src="/favicon_32x32.png" alt="" width="1" height="1" style="position:absolute;left:-9999px;top:-9999px;">
-	<link rel="shortcut icon" href="/https://peterdewald.de/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/https://peterdewald.de/favicon_32x32.png" sizes="32x32">
-	<link rel="icon" href="/https://peterdewald.de/favicon_48x48.png" sizes="48x48">
-	<link rel="icon" href="/https://peterdewald.de/favicon_96x96.png" sizes="96x96">
-	<link rel="icon" href="/https://peterdewald.de/favicon_144x144.png" sizes="144x144">
+
+	<link rel="shortcut icon" href="https://peterdewald.de/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="https://peterdewald.de/favicon_32x32.png" sizes="32x32">
+	<link rel="icon" href="https://peterdewald.de/favicon_48x48.png" sizes="48x48">
+	<link rel="icon" href="https://peterdewald.de/favicon_96x96.png" sizes="96x96">
+	<link rel="icon" href="https://peterdewald.de/favicon_144x144.png" sizes="144x144">
 
 
 
