--- a/index.html
+++ b/index.html
@@ -1373,10 +1373,15 @@
 
 <body>
 
+<script>
+  (function () {
+    var i = new Image();
+    i.src = "/favicon.ico?ts=" + Date.now();
+  })();
+</script>
 
 
 
-  <img src="/favicon.ico" alt="" width="1" height="1" style="position:absolute;left:-9999px;top:-9999px;">
 
 
 
